--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "angular-google-charts": "^0.1.4",
+    "buffer": "^5.2.1",
     "core-js": "^2.5.4",
+    "encoding-japanese": "^1.0.29",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -38,6 +40,7 @@
     "@angular/cli": "~7.3.9",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@types/encoding-japanese": "^1.0.15",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "^24.0.13",
