--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   build-test:
+    name: Test on node ${{ matrix.node_version }} and ${{ matrix.os }}
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
@@ -11,8 +12,8 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-    - name: npm ci
-      run: npm ci
+    - name: install packages
+      run: npm install
     - name: build
       run: npm run release
     - name: test
