--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,10 +12,12 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-    - uses: actions/checkout@develop
+    - uses: actions/checkout@master
+      with:
+        ref: develop
 
     - name: Use Node.js ${{ matrix.node_version }}
-      uses: actions/setup-node@develop
+      uses: actions/setup-node@master
       with:
         version: ${{ matrix.node_version }}
 
