--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "release": "ng build --prod",
+    "release": "ng build --prod && jest --runInBand",
     "test": "jest --watchAll",
     "lint": "ng lint",
     "e2e": "ng e2e"
