--- a/.github/workflows/release-firebase.yml
+++ b/.github/workflows/release-firebase.yml
@@ -31,9 +31,8 @@ jobs:
         name: dist
         path: dist
   deploy:
-    name: Deploy
     needs: build
-    name: Test on node ${{ matrix.node_version }} and ${{ matrix.os }}
+    name: Deploy app to firebase
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
