--- a/.github/workflows/release-firebase.yml
+++ b/.github/workflows/release-firebase.yml
@@ -31,7 +31,7 @@ jobs:
         name: dist
         path: dist
   deploy:
-    needs: build
+    needs: build-test
     name: Deploy app to firebase
     runs-on: ${{matrix.os}}
     strategy:
