validate workflow sysntax

--- a/.github/workflows/release-firebase.yml
+++ b/.github/workflows/release-firebase.yml
@@ -36,9 +36,7 @@ jobs:
         uses: actions/download-artifact@master
         with:
           name: dist
+      - name: install firebase-tools
+        run: npm install firebase-tools
       - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only hosting:prod
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        run: firebase deploy --token=${{ secrets.FIREBASE_TOKEN }}
