--- a/.github/workflows/release-firebase.yml
+++ b/.github/workflows/release-firebase.yml
@@ -37,6 +37,6 @@ jobs:
         with:
           name: dist
       - name: install firebase-tools
-        run: npm install firebase-tools
+        run: npm install -g firebase-tools
       - name: Deploy to Firebase
         run: firebase deploy --token=${{ secrets.FIREBASE_TOKEN }}
