--- a/.github/workflows/release-firebase.yml
+++ b/.github/workflows/release-firebase.yml
@@ -12,31 +12,20 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@master
-    - name: Use Node.js ${{ matrix.node_version }}
-      uses: actions/setup-node@master
-      with:
-        version: ${{ matrix.node_version }}
     - name: install packages, build and test
       run: |
         npm install
-        npm run release
-    - name: Archive Production Artifact
-      uses: actions/upload-artifact@master
-      with:
-        name: dist
-        path: dist
+        npm run build-test
   deploy:
     needs: build-test
     name: Deploy app to firebase
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@master
-      - name: Download Artifact
-        uses: actions/download-artifact@master
-        with:
-          name: dist
-      - name: install firebase-tools
-        run: npm install -g firebase-tools
+    - name: Checkout Repo
+      uses: actions/checkout@master
+    - name: install packages, build and test
+      run: |
+        npm install
+        npm run release
       - name: Deploy to Firebase
-        run: firebase deploy --token=${{ secrets.FIREBASE_TOKEN }}
+        run: ./node_modules/.bin/firebase deploy --token=${{ secrets.FIREBASE_TOKEN }}
