--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "release": "ng build --prod && jest --runInBand",
+    "build-test": "ng build --prod && jest",
+    "release": "ng build --prod",
     "test": "jest --watchAll",
     "test:coverage": "jest --coverage",
     "lint": "tslint --project .",
@@ -48,6 +49,7 @@
     "@types/jest": "^24.0.13",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "firebase-tools": "^7.6.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "^24.8.0",
