validate workflow sysntax

--- a/.github/workflows/release-firebase.yml
+++ b/.github/workflows/release-firebase.yml
@@ -23,9 +23,9 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@master
-    - name: install packages, build and test
+    - name: create dist
       run: |
         npm install
         npm run release
-      - name: Deploy to Firebase
-        run: ./node_modules/.bin/firebase deploy --token=${{ secrets.FIREBASE_TOKEN }}
+    - name: Deploy to Firebase
+      run: ./node_modules/.bin/firebase deploy --token=${{ secrets.FIREBASE_TOKEN }}
