--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "release": "ng build --prod && jest --runInBand",
     "test": "jest --watchAll",
     "test:coverage": "jest --coverage",
-    "lint": "tslint --project .",
+    "lint": "tslint --project . --fix",
     "e2e": "ng e2e"
   },
   "jest": {
